--- a/src/app/components/games/game-card/game-card.html
+++ b/src/app/components/games/game-card/game-card.html
@@ -2,14 +2,14 @@
   <mat-card-header>
     <mat-card-title>{{game.name}}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image src="/{{game.name}}.jpg" alt="Photo of a Shiba Inu">
+  <img mat-card-image src="/{{game.name}}.jpg">
   <mat-card-content>
     <p>
       Un TCG pas comme les autres
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button [routerLink]="['/games', game.name]">Voir cartes</button>
+    <button mat-button [routerLink]="['/games', game.id, 'item-types']">Voir types d'item</button>
   </mat-card-actions>
 </mat-card>
 
