--- a/src/app/components/items/items.html
+++ b/src/app/components/items/items.html
@@ -1,6 +1,7 @@
 <div *ngIf="items$ | async as itemList">
     <div *ngFor="let item of itemList">
-        {{ item.url }}
+        <app-item-card [item]="item"></app-item-card>
+        <!--{{ item.url }}-->
     </div>
 </div>
 
