--- a/src/app/components/item-price-histories/item-price-histories.html
+++ b/src/app/components/item-price-histories/item-price-histories.html
@@ -1,12 +1,12 @@
 <h2>Historique des prix</h2>
+
 <div *ngIf="item$ | async as item">
     {{item.game.name}} - {{item.itemType.name}} {{item.expansion.name}}
     {{item.complement}} ({{item.locale.name}})
 </div>
-<div *ngIf="priceHistories$ | async as priceHistories">
-    <div *ngFor="let priceHistory of priceHistories">
-        {{priceHistory.averagePrice}}
-    </div>
+
+<div class="chart-container">
+    <canvas #priceChart></canvas>
 </div>
 
 <div>
