--- a/src/app/components/items/item-card/item-card.html
+++ b/src/app/components/items/item-card/item-card.html
@@ -6,6 +6,7 @@
   <mat-card-content>
   </mat-card-content>
   <mat-card-actions>
+    <button mat-button [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'user-items']">Mes Items</button>
     <button mat-button [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'price-histories']">Historique des prix CM</button>
     <a matButton="elevated" href="{{item.url}}" target="_blank">Voir page CM</a>
   </mat-card-actions>
