--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -22,5 +22,8 @@
 
     <div *ngIf="userItem.comment">{{userItem.comment}}</div>
   </mat-card-content>
+  <mat-card-actions>
+    <button (click)="onDelete()">Supprimer</button>
+  </mat-card-actions>
 </mat-card>
 
