--- a/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
+++ b/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
@@ -22,7 +22,7 @@
 
   </mat-dialog-content>
 
-  <mat-dialog-actions align="end">
+  <mat-dialog-actions>
     <button mat-button type="button" (click)="cancel()">Annuler</button>
     <button mat-raised-button color="primary" type="submit">
       Enregistrer
