--- a/src/app/components/utils/confirm-dialog/confirm-dialog.html
+++ b/src/app/components/utils/confirm-dialog/confirm-dialog.html
@@ -6,5 +6,5 @@ Confirmez-vous la suppresion ?
 
 <mat-dialog-actions>
 <button mat-button type="button" (click)="cancel()">Annuler</button>
-<button mat-button type="button" (click)="confirm()">Confirmer</button>
+<button mat-raised-button type="button" (click)="confirm()">Confirmer</button>
 </mat-dialog-actions>
