Add Open UserItem action and do not see these items on chart

--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -12,7 +12,7 @@
         Prix de vente : {{userItem.sellingPrice}}
       </div>
       <div>
-        Date de vente : {{userItem.sellingOrOpeningDate}}
+        Date de la vente : {{userItem.sellingOrOpeningDate}}
       </div>
     } @else if (userItem.sellingOrOpeningDate) {
       <div>
