--- a/src/app/components/user-items/user-items.html
+++ b/src/app/components/user-items/user-items.html
@@ -10,6 +10,7 @@
     <app-user-item-card 
     [userItem]="userItem" 
     (sell)="onSell($event.userItemId, $event.sellUserItem)"
+    (open)="onOpen($event.userItemId, $event.openUserItem)"
     (delete)="onDelete($event)"/>
   </div>
 </div>
