--- a/src/app/components/user-items/open-user-item-dialog/open-user-item-dialog.html
+++ b/src/app/components/user-items/open-user-item-dialog/open-user-item-dialog.html
@@ -1,1 +1,26 @@
-<p>open-user-item-dialog works!</p>
+<h2 mat-dialog-title>Ouvrir cet item</h2>
+
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <mat-dialog-content>
+
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Date de l'ouverture</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="openingDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Commentaire</mat-label>
+      <textarea matInput rows="3" formControlName="comment"></textarea>
+    </mat-form-field>
+
+  </mat-dialog-content>
+
+  <mat-dialog-actions>
+    <button mat-button type="button" (click)="cancel()">Annuler</button>
+    <button mat-raised-button color="primary" type="submit">
+      Enregistrer
+    </button>
+  </mat-dialog-actions>
+</form>
