--- a/src/app/components/utils/confirm-dialog/confirm-dialog.html
+++ b/src/app/components/utils/confirm-dialog/confirm-dialog.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Attention</h2>
 
 <mat-dialog-content>
-Confirmez-vous la suppresion ?
+Confirmez-vous l'action ?
 </mat-dialog-content>
 
 <mat-dialog-actions>
