--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -25,6 +25,7 @@
   <mat-card-actions>
     <button *ngIf="!userItem.sellingOrOpeningDate" (click)="onSell()">Vendre</button>
     <button *ngIf="!userItem.sellingOrOpeningDate" (click)="onOpen()">Ouvrir</button>
+    <button *ngIf="!userItem.sellingOrOpeningDate" (click)="onDuplicate()">Dupliquer</button>
     <button (click)="onDelete()">Supprimer</button>
   </mat-card-actions>
 </mat-card>
