--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,9 @@
-<h1>Gestionnaire de collections de scellés et de cartes TCG</h1>
-<router-outlet></router-outlet>
+<div class="app-container">
+  <header class="app-header">
+    <h1>Gestionnaire de collections de scellés et de cartes TCG</h1>
+  </header>
+
+  <main class="app-content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
