--- a/src/app/components/games/game-card/game-card.html
+++ b/src/app/components/games/game-card/game-card.html
@@ -4,7 +4,10 @@
   </mat-card-header>
   <img mat-card-image src="/{{game.name}}.jpg">
   <mat-card-actions>
-    <button mat-button [routerLink]="['/games', game.id, 'item-types']">Voir types d'item</button>
+    <button mat-button [routerLink]="['/games', game.id, 'item-types']">
+      <mat-icon>visibility</mat-icon>
+      Voir types d'item
+    </button>
   </mat-card-actions>
 </mat-card>
 
