--- a/src/app/components/item-price-histories/item-price-histories.html
+++ b/src/app/components/item-price-histories/item-price-histories.html
@@ -1,14 +1,18 @@
-<h2>Historique des prix</h2>
-
-<div *ngIf="item$ | async as item">
-    {{item.game.name}} - {{item.itemType.name}} {{item.expansion.name}}
-    {{item.complement}} ({{item.locale.name}})
+<div class="page-header">
+    <div>
+        <h2>Historique des prix</h2>
+        
+        <div *ngIf="item$ | async as item">
+            {{item.game.name}} - {{item.itemType.name}} {{item.expansion.name}}
+            {{item.complement}} ({{item.locale.name}})
+        </div>    
+    </div>
+    <button mat-stroked-button (click)="retour()">
+        <mat-icon>undo</mat-icon>
+        Retour
+    </button>
 </div>
 
 <div class="chart-container">
     <canvas #priceChart></canvas>
-</div>
-
-<div>
-    <button (click)="retour()">Retour</button>
 </div>
