--- a/src/app/components/items/item-card/item-card.html
+++ b/src/app/components/items/item-card/item-card.html
@@ -6,9 +6,22 @@
   <mat-card-content>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'user-items']">Mes Items</button>
-    <button mat-button [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'price-histories']">Historique des prix CM</button>
-    <a matButton="elevated" href="{{item.url}}" target="_blank">Voir page CM</a>
+    <button mat-button
+            [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'user-items']">
+      <mat-icon>inventory</mat-icon>
+      Mes Items
+    </button>
+
+    <button mat-button
+            [routerLink]="['/games', item.game.id, 'item-types', item.itemType.id, 'items', item.id, 'price-histories']">
+      <mat-icon>show_chart</mat-icon>
+      Historique CM
+    </button>
+
+    <a mat-button href="{{item.url}}" target="_blank">
+      <mat-icon>open_in_new</mat-icon>
+      Page CM
+    </a>
   </mat-card-actions>
 </mat-card>
 
