--- a/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
+++ b/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Ajouter un item</h2>
+<h2 class="dialog-header" mat-dialog-title>Ajouter un item</h2>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
   <mat-dialog-content>
@@ -23,8 +23,12 @@
   </mat-dialog-content>
 
   <mat-dialog-actions>
-    <button mat-button type="button" (click)="cancel()">Annuler</button>
+    <button mat-button type="button" (click)="cancel()">
+      <mat-icon>undo</mat-icon>
+      Annuler
+    </button>
     <button mat-raised-button color="primary" type="submit">
+      <mat-icon>save</mat-icon>
       Enregistrer
     </button>
   </mat-dialog-actions>
