--- a/src/app/components/user-items/open-user-item-dialog/open-user-item-dialog.html
+++ b/src/app/components/user-items/open-user-item-dialog/open-user-item-dialog.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>Ouvrir cet item</h2>
-
-<div>
-  <p>Prix d'achat : {{ data.userItem.purchasePrice }} €</p>
-  <p>Date d'achat : {{ data.userItem.purchaseDate | date:'dd/MM/yyyy' }}</p>
+<div class="dialog-header">
+  <h2 mat-dialog-title>Ouvrir cet item</h2>
+  
+  <div>
+    <p>Prix d'achat : {{ data.userItem.purchasePrice }} €</p>
+    <p>Date d'achat : {{ data.userItem.purchaseDate | date:'dd/MM/yyyy' }}</p>
+  </div>
 </div>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
@@ -23,8 +25,12 @@
   </mat-dialog-content>
 
   <mat-dialog-actions>
-    <button mat-button type="button" (click)="cancel()">Annuler</button>
+    <button mat-button type="button" (click)="cancel()">
+      <mat-icon>undo</mat-icon>
+      Annuler
+    </button>
     <button mat-raised-button color="primary" type="submit">
+      <mat-icon>save</mat-icon>
       Enregistrer
     </button>
   </mat-dialog-actions>
