--- a/src/app/components/user-items/user-item-card/user-item-card.css
+++ b/src/app/components/user-items/user-item-card/user-item-card.css
@@ -1,3 +1,16 @@
-.example-card {
-  max-width: 500px;
+mat-card-content div {
+  margin-bottom: 4px;
+  font-size: 0.9rem;
+}
+
+mat-card-content div:last-child {
+  margin-bottom: 0;
+}
+
+.sold {
+  border-left: 8px solid #16a34a; /* vert */
+}
+
+.opened {
+  border-left: 8px solid #f59e0b; /* orange */
 }
