--- a/src/app/components/utils/confirm-dialog/confirm-dialog.html
+++ b/src/app/components/utils/confirm-dialog/confirm-dialog.html
@@ -1,10 +1,16 @@
-<h2 mat-dialog-title>Attention</h2>
+<h2 class="dialog-header" mat-dialog-title>Attention</h2>
 
 <mat-dialog-content>
 Confirmez-vous l'action ?
 </mat-dialog-content>
 
 <mat-dialog-actions>
-<button mat-button type="button" (click)="cancel()">Annuler</button>
-<button mat-raised-button type="button" (click)="confirm()">Confirmer</button>
+    <button mat-button type="button" (click)="cancel()">
+        <mat-icon>undo</mat-icon>
+        Annuler
+    </button>
+    <button mat-raised-button color="primary" type="submit">
+        <mat-icon>check</mat-icon>
+        Confirmer
+    </button>
 </mat-dialog-actions>
