--- a/src/app/components/items/item-card/item-card.html
+++ b/src/app/components/items/item-card/item-card.html
@@ -20,7 +20,7 @@
 
     <a mat-button href="{{item.url}}" target="_blank">
       <mat-icon>open_in_new</mat-icon>
-      Page CM
+      Lien CM
     </a>
   </mat-card-actions>
 </mat-card>
