--- a/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
+++ b/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
@@ -23,7 +23,7 @@
   </mat-dialog-content>
 
   <mat-dialog-actions>
-    <button mat-button type="button" (click)="cancel()">
+    <button mat-button (click)="cancel()">
       <mat-icon>undo</mat-icon>
       Annuler
     </button>
