--- a/src/app/components/utils/confirm-dialog/confirm-dialog.html
+++ b/src/app/components/utils/confirm-dialog/confirm-dialog.html
@@ -1,15 +1,11 @@
-<h2 class="dialog-header" mat-dialog-title>Attention</h2>
-
-<mat-dialog-content>
-Confirmez-vous l'action ?
-</mat-dialog-content>
+<h3 style="margin-left: 10px;" mat-dialog-title>Confirmez-vous l'action ?</h3>
 
 <mat-dialog-actions>
-    <button mat-button type="button" (click)="cancel()">
+    <button mat-button (click)="cancel()">
         <mat-icon>undo</mat-icon>
         Annuler
     </button>
-    <button mat-raised-button color="primary" type="submit">
+    <button mat-raised-button color="primary" (click)="confirm()">
         <mat-icon>check</mat-icon>
         Confirmer
     </button>
