--- a/src/app/shared/css/dialog.css
+++ b/src/app/shared/css/dialog.css
@@ -9,6 +9,9 @@ mat-dialog-content {
 }
 
 mat-dialog-actions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 8px;
 }
 
