Changing global colors

--- a/src/app/components/item-types/item-types.html
+++ b/src/app/components/item-types/item-types.html
@@ -3,8 +3,8 @@
     Types d'Item {{ game.name }}
     </h2>
 
-    <button mat-stroked-button (click)="retour()">
-        <mat-icon>undo</mat-icon>
+    <button mat-stroked-button class="back-button" (click)="retour()">
+        <mat-icon>arrow_back</mat-icon>
         Retour
     </button>
 </div>
