--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -28,7 +28,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button *ngIf="!userItem.sellingOrOpeningDate" (click)="onSell()">
-      <mat-icon>sell</mat-icon>
+      <mat-icon color="primary">sell</mat-icon>
       Vendre
     </button>
 
