--- a/src/app/components/items/items.html
+++ b/src/app/components/items/items.html
@@ -3,8 +3,8 @@
         {{itemType.name}} {{game.name}}
     </h2>
 
-    <button mat-stroked-button (click)="retour()">
-        <mat-icon>undo</mat-icon>
+    <button mat-stroked-button class="back-button" (click)="retour()">
+        <mat-icon>arrow_back</mat-icon>
         Retour
     </button>
 </div>
