--- a/src/app/shared/css/cards-grid.css
+++ b/src/app/shared/css/cards-grid.css
@@ -14,3 +14,13 @@
 .page-header h2 {
   margin: 0;
 }
+
+button.mat-mdc-outlined-button.back-button {
+  border-color: #94a3b8;
+  color: #334155;
+}
+
+button.mat-mdc-outlined-button.back-button mat-icon {
+  color: #334155;
+}
+
