--- a/src/app/components/item-price-histories/item-price-histories.html
+++ b/src/app/components/item-price-histories/item-price-histories.html
@@ -8,7 +8,7 @@
         </div>    
     </div>
     <button mat-stroked-button (click)="retour()">
-        <mat-icon>undo</mat-icon>
+        <mat-icon>arrow_back</mat-icon>
         Retour
     </button>
 </div>
