Create a BackButton component and use it in the screens

--- a/src/app/components/item-price-histories/item-price-histories.html
+++ b/src/app/components/item-price-histories/item-price-histories.html
@@ -7,10 +7,8 @@
             {{item.complement}} ({{item.locale.name}})
         </div>    
     </div>
-    <button mat-stroked-button (click)="retour()">
-        <mat-icon>arrow_back</mat-icon>
-        Retour
-    </button>
+    
+    <app-bouton-retour/>
 </div>
 
 <div class="chart-container">
