--- a/src/app/components/item-types/item-types.html
+++ b/src/app/components/item-types/item-types.html
@@ -3,10 +3,7 @@
     Types d'Item {{ game.name }}
     </h2>
 
-    <button mat-stroked-button class="back-button" (click)="retour()">
-        <mat-icon>arrow_back</mat-icon>
-        Retour
-    </button>
+    <app-bouton-retour/>
 </div>
 
 <div *ngIf="itemTypes$ | async as itemTypes" class="cards-grid">
