--- a/src/app/components/user-items/user-items.html
+++ b/src/app/components/user-items/user-items.html
@@ -8,10 +8,7 @@
     </div>
   </div>
 
-  <button mat-stroked-button class="back-button" (click)="retour()">
-    <mat-icon>arrow_back</mat-icon>
-    Retour
-  </button>
+  <app-bouton-retour/>
 </div>
 
 <div class="add-item">
