--- a/src/app/components/items/items.html
+++ b/src/app/components/items/items.html
@@ -3,10 +3,7 @@
         {{itemType.name}} {{game.name}}
     </h2>
 
-    <button mat-stroked-button class="back-button" (click)="retour()">
-        <mat-icon>arrow_back</mat-icon>
-        Retour
-    </button>
+    <app-bouton-retour/>
 </div>
 <div *ngIf="items$ | async as items" class="cards-grid">
     <div *ngFor="let item of items">
