Rename in english

--- a/src/app/components/item-types/item-types.html
+++ b/src/app/components/item-types/item-types.html
@@ -3,7 +3,7 @@
     Types d'Item {{ game.name }}
     </h2>
 
-    <app-bouton-retour/>
+    <app-back-button/>
 </div>
 
 <div *ngIf="itemTypes$ | async as itemTypes" class="cards-grid">
