--- a/src/app/components/item-search/item-search.html
+++ b/src/app/components/item-search/item-search.html
@@ -1,5 +1,7 @@
 <div class="page-header">
   <h2>Recherche d’items</h2>
+
+  <app-back-button/>
 </div>
 
 <div *ngIf="filters$ | async as filters" class="item-search-filters">
