--- a/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
+++ b/src/app/components/user-items/add-user-item-dialog/add-user-item-dialog.html
@@ -17,7 +17,7 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput rows="3" formControlName="comment"></textarea>
+      <textarea matInput rows="3" formControlName="purchaseComment"></textarea>
     </mat-form-field>
 
   </mat-dialog-content>
