--- a/src/app/components/user-items/user-item-card/user-item-card.html
+++ b/src/app/components/user-items/user-item-card/user-item-card.html
@@ -28,8 +28,13 @@
 
   </mat-card-content>
   <mat-card-actions>
+    <button mat-button *ngIf="!userItem.sellingOrOpeningDate" (click)="onEdit()">
+      <mat-icon>edit</mat-icon>
+      Modifier
+    </button>
+
     <button mat-button *ngIf="!userItem.sellingOrOpeningDate" (click)="onSell()">
-      <mat-icon color="primary">sell</mat-icon>
+      <mat-icon>sell</mat-icon>
       Vendre
     </button>
 
